<resources>
    <string name="app_name">BudgetBoi</string>
    <string name="title_activity_new_account">NewAccountActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="new_account_title">New Account</string>
    <string name="new_account_institution">Institution</string>
    <string name="new_account_type">Account type</string>
    <string name="new_account_submit">Submit</string>
    <string name="overview_add_button">button to add account</string>
    <string name="overview_title">Account Overview</string>
    <string name="edit_account_title">Edit Account</string>
    <string name="new_account_save">save</string>
    <string name="account_description">Description</string>

    <string name="new_account_confirm_title">Test Title</string>
    <string name="new_account_confirm_message">Test message</string>
    <string name="new_account_confirm_accept">Accept</string>
    <string name="new_account_confirm_decline">Decline</string>
    <string name="new_account_confirm_cancel">Cancel</string>
    <string name="new_account_error">Field required</string>
    <string name="institution_helper">E.g. Chase, Vanguard</string>
    <string name="new_account_helper">E.g. Savings, Checking, etc.</string>

</resources>